# Notation

./: .gitignore  123.txt  Cargo.toml  README.md  giantsteps.txt  normal.txt  notes.txt  notes_to_midi.py  output.mid  progToMidi.sh  scale.mid  scale.txt  test.txt  writeup.txt
MidiProg/: 10.mid  123.mid  4chords.mid  demo.mid  giantsteps.mid  honors.mid  january.mid  presentation.mid  sarah.mid  test.mid
MidiService/: notes_to_midi.py
MusicTheoryApp/: Cargo.toml
MusicTheoryApp/src/: chord_progression.rs  main  main.rs
notation-frontend/: index.html  tailwind.config.js
notation-frontend/src/: App.jsx  Chord.jsx  ChordList.jsx  index.css
progressions/: 10.txt  4chords.txt  demo.txt  honors.txt  january.txt  notation.txt  presentation.txt  sarah.txt  test.txt  test1.txt  verse.txt
src/: audio_test.rs  chord_progression.rs  main.rs
