[package]
name = "learningRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-music-theory = "0.2"
text_io = "0.1.12"
colored = "2.0.0"
[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

